# mesh-rs

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  PROJECT_BRIEF.md
.claude/agents/: mesh-node-executor.md  mesh-node-verifier.md
docs/mesh-protocol/: SECURITY.md  SPECIFICATION.md
phases/: PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  PHASE_8.md
src/: envelope.rs  error.rs  identity.rs  lib.rs  peer.rs  publish.rs  revoke.rs  search.rs  signing.rs  tools.rs  trust.rs  types.rs
src/http/: announce.rs  identity.rs  mod.rs  peers.rs  search.rs
src/storage/: identity.rs  mod.rs  peers.rs  records.rs  revocations.rs
tests/: federation_test.rs
