[package]
name = "mesh-node"
version = "0.1.0"
edition = "2021"
description = "MESH federation library for nellie-rs"
license = "MIT"

[dependencies]
axum = "0.8"
base64 = "0.22"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
json-canon = "0.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["time", "rt"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
